--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/layout.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/layout.html
@@ -62,6 +62,9 @@
 
         <a class="nav-link" id="accounts-link" href="/accounts"> <i class="fas fa-users-cog"></i> Accounts
         </a>
+
+        <a class="nav-link" id="datasets-link" href="/datasets"> <i class="fas fa-database"></i> Datasets
+        </a>
         {% endif %}
       </ul>
 
