--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three_new popup.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/three_new popup.html
@@ -558,45 +558,8 @@
                                             class="fas fa-expand"></i>&nbsp Fullscreen&nbspXY</button> -->
                                 </div>
                             </div>
-                            <div class="card-body" style="height: 100%;">
+                            <div class="card-body">
                                 <div id="xyDiv" style="cursor: crosshair;"></div>
-                                <!-- <div class="row h-100">
-                                    <form id="xyForm" class="form-inline" onSubmit="return false;">
-                                        <div id="arrowControls"
-                                            class="form-group mb-2 col-sm-12 col-md-4 d-flex justify-content-center">
-                                            <button id="stepBackBtn" class="cust-full" type="button" disabled><i
-                                                    class="mx-1 fa-lg fas fa-step-backward"></i></button>
-                                            <button id="backBtn" class="cust-full" type="button" disabled><i
-                                                    class="mx-1 fa-lg fas fa-arrow-left"></i></button>
-                                            <button id="forwardBtn" class="cust-full" type="button" disabled><i
-                                                    class="mx-1 fa-lg fas fa-arrow-right"></i></button>
-                                            <button id="stepForwardBtn" class="cust-full" type="button" disabled><i
-                                                    class="mx-1 fa-lg fas fa-step-forward"></i></button>
-                                        </div>
-                                        <div id="sliceDiv" class="form-group mb-2 col-sm-12 col-md-2">
-                                            <label for="sliceInput">Slice Navigator: </label>
-                                            <input id="sliceInput" class="mx-1 form-control col-10" type="number"
-                                                type="button" max="700" disabled>
-                                        </div>
-                                        <div id="sliderDiv" class="form-group mb-2 col-sm-12 col-md-3">
-                                            <input id="sliceRange" class="form-control-range col-10 mt-3" type="range"
-                                                disabled>
-                                        </div>
-                                        <div class="form-group mb-1 col-sm-12 col-md-3">
-                                            <button id="2dFullIconBtnXY"
-                                                class="btn btn-primary form-control-range col-5 mt-3" type="button"
-                                                disabled><i class="fas fa-expand"></i></button>
-                                        </div>
-
-                                    </form>
-
-                                    <div id="xyOverlayDiv"
-                                        class="d-none justify-content-center align-items-center overlay">
-                                        <div class="w-100 justify-content-center align-items-center">
-                                            <div class="spinner"></div>
-                                        </div>
-                                    </div>
-                                </div> -->
                             </div>
                         </div>
                     </div>
